<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etNumberMulty"
        android:layout_width="86dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="380dp"
        android:autoText="false"
        android:ems="10"
        android:inputType="number"
        android:text="@string/etNumber"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/btnReset"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbNegativeNumber"
        android:layout_width="102dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="380dp"
        android:onClick="showButtonNegative"
        android:text="@string/cbNegativeNumber"
        app:layout_constraintStart_toEndOf="@+id/etNumberMulty"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="380dp"
        android:text="@string/btnReset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTittle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="48dp"
        android:text="@string/tvTittle1"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRes"
        android:layout_width="80dp"
        android:layout_height="79dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="120dp"
        android:text="@string/btnRes"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTittle1" />

    <Button
        android:id="@+id/btnSum"
        android:layout_width="80dp"
        android:layout_height="79dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="120dp"
        android:text="@string/btnSum"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btnRes"
        app:layout_constraintTop_toBottomOf="@+id/tvTittle1" />

    <ToggleButton
        android:id="@+id/tbShowControls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="172dp"
        android:onClick="showControls"
        android:text="@string/tbShowControls"
        android:textOff="@string/tbShowControls"
        android:textOn="@string/tbShowControls1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNumberResult" />

    <TextView
        android:id="@+id/tvNumberResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:layout_marginTop="28dp"
        android:text="@string/tvNumberResult"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTittle1" />

</androidx.constraintlayout.widget.ConstraintLayout>